fix: add the min-width prop to the sidebar to prevent overflow

--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   height: calc(100vh - var(--navbar-height));
   width: var(--sidebar-width);
+  min-width: min-content;
   padding: 20px;
   background-color: var(--inverted-bg-color);
   transition: width ease-in-out 0.3s;
@@ -12,6 +13,7 @@
 
 .collapsed {
   width: var(--sidebar-width-collapsed);
+  min-width: min-content;
 }
 
 .toggleButton {
